--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.11.18",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-table": "^7.7.9",
     "@types/styled-components": "^5.1.19",
     "axios": "^0.24.0",
     "eslint-config-prettier": "^8.3.0",
@@ -24,7 +25,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-table": "^7.7.0",
     "styled-components": "^5.3.3",
+    "swr": "^1.1.2",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
